--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.1",
+    "@mui/x-date-pickers": "^7.23.3",
     "cra-template-typescript": "1.2.0",
+    "dayjs": "^1.11.13",
     "module": "^1.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
