--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "module": "^1.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-id-generator": "^3.0.2",
+    "react-native-filesystem": "^0.1.0",
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1"
   },
